# robocomp

./: CMakeLists.txt  README.md
cmake/modules/: qt.cmake
components/: CMakeLists.txt
interfaces/: CAIHMCEchord.ice  CAIPersonEchord.ice  CAIPlannerItera.ice  CAIRecorderEchord.ice  CAIServerItera.ice  CAISpeechEchord.ice  CAITouchScreenEchord.ice  CAIWinKinectController.ice  HandWritingAndroid.ice  MiraLaser.ice  Navigator.ice  PersonSa3ir.ice  Speech.ice  TagBasedLocalization.ice
interfaces/IDSLs/: CAIHMCEchord.idsl  CAIPersonEchord.idsl  CAIPlannerItera.idsl  CAIRecorderEchord.idsl  CAIServerItera.idsl  CAISpeechEchord.idsl  CAITouchScreenEchord.idsl  CAIWinKinectController.idsl  HandWritingAndroid.idsl  MiraLaser.idsl  Navigator.idsl  PersonSa3ir.idsl  Speech.idsl  TagBasedLocalization.idsl  miraLaser.idsl  personFollower.idsl
tools/AGM/: CMakeLists.txt  compile.sh  instDep.sh
tools/AGM/AGGLPlanner/: linearregressionpredictor.py
tools/AGM/examples/: runTests.sh
tools/AGM/examples/basic/: grammar.aggl
tools/AGM/libagm/: agm_config.h  agm_model.cpp  agm_model.h  agm_modelDrawer.h  agm_modelPrinter.cpp
tools/AGM/tools/AGMExecutive_robocomp/: AGMExecutive_core.py  AGMExecutive_robocomp.py
tools/AGM/tools/agmagentsim/: CMakeLists.txt
tools/AGM/tools/agminner/src/: CMakeLists.txt  CMakeListsSpecific.txt
tools/AGM/tools/agmmission/src/: CMakeLists.txt  CMakeListsSpecific.txt  agmexecutivetopicI.h  agmexecutivevisualizationtopicI.h  genericworker.h  specificworker.h
tools/AGM/tools/worldDumper/: CMakeLists.txt  DoxyFile  README.md  worldDumper.cdsl
tools/AGM/tools/worldDumper/etc/: config
tools/AGM/tools/worldDumper/src/: CMakeLists.txt  CMakeListsSpecific.txt  config.h  genericDumper.h  genericworker.cpp  genericworker.h  main.cpp  robocompDumper.h  specificworker.cpp  specificworker.h
tools/AGM/tools/worldPlayer/: CMakeLists.txt  DoxyFile  README.md  worldPlayer.cdsl
tools/AGM/tools/worldPlayer/etc/: config
tools/AGM/tools/worldPlayer/src/: CMakeLists.txt  CMakeListsSpecific.txt  config.h  genericDumper.cpp  genericworker.cpp  genericworker.h  main.cpp  mainUI.ui  robocompDumper.cpp  specificworker.cpp  specificworker.h
tools/buildTools/: rcbuild.py
tools/rclogtool/: CMakeLists.txt  README.md  rclogtool.sh
tools/rcremote/: rcremoteshell.sh
tools/roboCompDSL/DSLEditor/: DSLEditor.ini  artifacts.xml
tools/roboCompDSL/DSLEditor/configuration/: config.ini
tools/roboCompDSL/DSLEditor/configuration/org.eclipse.core.runtime/: .contributions.7  .contributors.7  .extraData.7  .mainData.7  .namespaces.7  .table.7
tools/roboCompDSL/DSLEditor/configuration/org.eclipse.core.runtime/.manager/: .fileTable.13  .fileTable.14
tools/roboCompDSL/DSLEditor/configuration/org.eclipse.equinox.source/: source.info
tools/roboCompDSL/DSLEditor/configuration/org.eclipse.osgi/: framework.info.10
tools/roboCompDSL/DSLEditor/configuration/org.eclipse.osgi/.manager/: .fileTable.10  .fileTable.11
tools/roboCompDSL/DSLEditor/p2/org.eclipse.equinox.p2.core/cache/: artifacts.xml
tools/roboCompDSL/DSLEditor/plugins/org.eclipse.mofscript.editor_1.4.0.1/: plugin.properties  plugin.xml
tools/roboCompDSL/DSLEditor/plugins/org.eclipse.mofscript.fileresourcemodel_1.4.0.1/: frm.ecore  frm.genmodel  plugin.properties  plugin.xml
tools/roboCompDSL/DSLEditor/plugins/org.eclipse.mofscript.model_1.4.0.1/: plugin.properties  plugin.xml
tools/roboCompDSL/DSLEditor/plugins/org.eclipse.mofscript.parser_1.4.0.1/: plugin.properties
tools/roboCompDSL/DSLEditor/plugins/org.eclipse.mofscript.runtime_1.4.0.1/: plugin.properties
tools/roboCompDSL/DSLEditor/plugins/org.eclipse.mofscript.traceabilitymodel_1.4.0.1/: plugin.properties
tools/roboCompDSL/DSLEditor/plugins/org.eclipse.xtext.doc_2.6.0.v201405210727/: about.mappings
tools/roboCompDSL/m2tModels/: cdsl.m2t  ddsl.m2t  idsl.m2t  pconf.m2t  pdsl.m2t  properties.m2t
tools/robocompdsl/: parseCDSL.py
tools/robocompdsl/templateCPP/src/: CMakeLists.txt  main.cpp  specificworker.h
(+18 files in other folders)
